test/errors/struct_self_reference_nonnullable_fail.hy
// Non-nullable self references should be rejected with a clear diagnostic.

struct Loop
{
    Loop next
}